# aramaic-bowls-annotation-pipeline

./: CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
aramaic_bowls_pipeline/: __init__.py  classical_proposals.py  detection.py  io_utils.py  patching.py  pipeline.py  sam_postprocess.py  sam_wrapper.py  summarize_dataset.py  types.py  visualization.py
configs/: default.yaml
docs/: figures.md  input_structure.md  output_structure.md
examples/demo_dataset/: README.md
scripts/: run_pipeline.sh  summarize_dataset.sh
tests/: test_patching.py
